// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Group Example renders the Example Resource Group and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.id}"
    },
    "location": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.location}"
    },
    "name": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_resource_group": {
      "testRG_rg_D9B234FB": {
        "lifecycle": [
          {
            "ignore_changes": [
              "tags[\\"Environment\\"]"
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-\${var.name}",
        "tags": {
          "Env": "NonProd",
          "name": "test"
        }
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string"
    }
  }
}"
`;

exports[`Resource Group With Defaults renders a Resource Group with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.id}"
    },
    "location": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.location}"
    },
    "name": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_resource_group": {
      "testRG_rg_D9B234FB": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  }
}"
`;
